Fixed menu jump bug

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -70,7 +70,6 @@ body {
     top: 0;
     left: -100%;
 
-    overflow: hidden;
 
     width: 100%;
     height: 100vh;
@@ -127,6 +126,14 @@ body {
 }
 #mainMenu:before {
     content: '';
+    height: 100%;
+    width: 200px;
+    background: inherit;
+    position: absolute;
+    top: 0;
+    left: -200px;
+    background: inherit;
+    z-index: 30000;
 }
 .mainMenuInner {
     display: flex;
